@@ -11,7 +11,7 @@
   <log4net>
     <!-- Define some output appenders -->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="%property{LogName}/fb2epub.log"/>
+      <file type="log4net.Util.PatternString" value="%property{LogFileName}"/>
       <appendToFile value="true"/>
       <maxSizeRollBackups value="10"/>
       <maximumFileSize value="204800"/>
