@@ -212,6 +212,8 @@
         <dd>Enable/Disable Calibre metadata injection into output file, used by some programs to sort, display series etc. Default: 1(Enabled)</dd>
         <dt><strong>-fixcodeformat:<em>[0/1]</em></strong></dt>
         <dd>Enable/Disable the workaround [code] spaces formatting problem. Default: 1(Enabled)</dd>
+        <dt><strong>-log:<em>file_path</em></strong></dt>
+        <dd>Redirect logger to a new file or path (can be either, in case of path uses "fb2epub.log" file name)</dd>
     </dl>
     <h2>
         Fonts:
